Update styles and add form in search component, import ReactiveFormsModule in app component, and update API calls in movie-api-service component

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
 
 <body>
     <app-root></app-root>
+    <!--JS -->
+    <!-- 正确的Bootstrap 5和Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.12/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
