Update CSS styles and add footer to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
 
 <body>
     <app-root></app-root>
+    <footer class=" text-center text-lg-start mt-5">
+        <div class="text-center p-3">
+            © 2024 Showtime:
+            <a href="https://aloha1357.github.io/showtime/browser/">aloha1357.github.io/showtime/browser/</a>
+            <br> Designed by Aloha1357
+            <br> API Data Provided by themoviedb.org
+        </div>
+    </footer>
     <!--JS -->
     <!-- 正确的Bootstrap 5和Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.12/dist/umd/popper.min.js"></script>
